[package]
name = "travis-explorer"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
curl = "0.4"
error-chain = "0.5"
futures = "0.1"
getopts = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
time = "0.1"
tokio-core = "0.1"
tokio-curl = { git = "https://github.com/tokio-rs/tokio-curl" }
chrono = "0.2"
log = "0.3"
